--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,6 @@ application {
 
 dependencies {
     compile "com.google.inject:guice:4.2.2"
+    compile "com.hubspot.dropwizard:dropwizard-guicier:1.3.5.1"
+    compile "io.dropwizard:dropwizard-core:1.3.5"
 }
